--- a/translations/texts/items/active/weapons/melee/broadsword/densiniumsword/densiniumsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/broadsword/densiniumsword/densiniumsword.activeitem.json
@@ -21,5 +21,17 @@
       "Chs": "超致密宽剑",
       "Eng": "Densinium Broadsword"
     }
+  },
+  {
+    "DeniedAlternatives": [],
+    "Files": {
+      "items/active/weapons/melee/broadsword/densiniumsword/densiniumsword.activeitem": [
+        "/altAbility/name"
+      ]
+    },
+    "Texts": {
+      "Chs": "权柄",
+      "Eng": "Empowerment"
+    }
   }
 ]
