--- a/translations/texts/items/active/weapons/melee/skath/broadsword/Plasmasword/skathtier3broadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/skath/broadsword/Plasmasword/skathtier3broadsword.activeitem.json
@@ -3,6 +3,18 @@
     "DeniedAlternatives": [],
     "Files": {
       "items/active/weapons/melee/skath/broadsword/Plasmasword/skathtier3broadsword.activeitem": [
+        "/description"
+      ]
+    },
+    "Texts": {
+      "Chs": "一把由绘世者工艺锻造的强大等离子剑刃。",
+      "Eng": "A powerful Plasmablade forged by the Skath."
+    }
+  },
+  {
+    "DeniedAlternatives": [],
+    "Files": {
+      "items/active/weapons/melee/skath/broadsword/Plasmasword/skathtier3broadsword.activeitem": [
         "/altAbility/name"
       ]
     },
