--- a/translations/texts/items/active/weapons/melee/skath/spear/Plasmaspear/skathtier3spear.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/skath/spear/Plasmaspear/skathtier3spear.activeitem.json
@@ -3,6 +3,17 @@
     "DeniedAlternatives": [],
     "Files": {
       "items/active/weapons/melee/skath/spear/Plasmaspear/skathtier3spear.activeitem": [
+        "/description"
+      ]
+    },
+    "Texts": {
+      "Eng": "A powerful Plasma polearm forged in Skathi style."
+    }
+  },
+  {
+    "DeniedAlternatives": [],
+    "Files": {
+      "items/active/weapons/melee/skath/spear/Plasmaspear/skathtier3spear.activeitem": [
         "/shortdescription"
       ]
     },
