--- a/translations/texts/objects/mantizi/imperialcup/imperialcup.object.json
+++ b/translations/texts/objects/mantizi/imperialcup/imperialcup.object.json
@@ -3,12 +3,22 @@
     "DeniedAlternatives": [],
     "Files": {
       "objects/mantizi/imperialcup/imperialcup.object": [
+        "/avianDescription"
+      ]
+    },
+    "Texts": {
+      "Eng": "A clay cup, round and sturdy."
+    }
+  },
+  {
+    "DeniedAlternatives": [],
+    "Files": {
+      "objects/mantizi/imperialcup/imperialcup.object": [
         "/glitchDescription/glitchEmotedText"
       ]
     },
     "Texts": {
-      "Chs": "一种普通的木制高脚杯。",
-      "Eng": "A common wooden goblet."
+      "Eng": "A common fired clay goblet."
     }
   },
   {
@@ -19,8 +29,7 @@
       ]
     },
     "Texts": {
-      "Chs": "木制的高脚杯。",
-      "Eng": "A goblet made of wood."
+      "Eng": "A goblet made of fired clay."
     }
   },
   {
@@ -31,8 +40,7 @@
       ]
     },
     "Texts": {
-      "Chs": "一个小木杯。",
-      "Eng": "A little wooden cup."
+      "Eng": "A little clay cup."
     }
   },
   {
@@ -43,8 +51,7 @@
       ]
     },
     "Texts": {
-      "Chs": "一个圆形的木制杯子。",
-      "Eng": "A round, wooden cup."
+      "Eng": "A round, fired clay cup."
     }
   },
   {
@@ -55,20 +62,7 @@
       ]
     },
     "Texts": {
-      "Chs": "沾满污迹的木制高脚杯。",
-      "Eng": "A stained wooden goblet."
-    }
-  },
-  {
-    "DeniedAlternatives": [],
-    "Files": {
-      "objects/mantizi/imperialcup/imperialcup.object": [
-        "/avianDescription"
-      ]
-    },
-    "Texts": {
-      "Chs": "一个木制的杯子，又圆又结实。",
-      "Eng": "A wooden cup, round and sturdy."
+      "Eng": "A stained clay goblet."
     }
   },
   {
