--- a/translations/texts/species/radien.species.json
+++ b/translations/texts/species/radien.species.json
@@ -2,7 +2,9 @@
   {
     "DeniedAlternatives": [],
     "Files": {
-      "species/radien.species": ["/charCreationTooltip/description"]
+      "species/radien.species": [
+        "/charCreationTooltip/description"
+      ]
     },
     "Texts": {
       "Chs": "一种害羞的放射性生物，其起源尚有争议。这个种族 ^red;是围绕饥饿而设计的^reset;。; ^red;挑战性较高^reset;\n\n  ^orange;食性^reset;：杂食（包括已烹饪的同位素）\n\n  ^orange;天赋^reset;：\n  生命值上限 x^green;1.1^reset;，能量值上限 x^green;1.2^reset;, ^red;随饥饿递减^reset; 防御 x^green;1.03^reset;\n ^green;抗性^reset;：+^green;35^reset;% 辐射, +^green;10^reset;% 毒素，+^green;5^reset;% 射线，^green;饱食度满时上限2倍^reset;。 +^green;5^reset;% 精神\n科技：辐射种球\n  ^cyan;免疫^reset;：辐射烧伤\n\n^orange;环境^reset;：\n ^green;辐射^reset; 生物群系：伤害 x^green;1.15^reset;, +^green;15^reset;% 能量恢复速度, -^green;5^reset;% 饥饿速度\n ^red;炎热^reset; 生物群系：防御 x^red;0.85^reset;，+^red;35^reset;% 饥饿速度\n  ^green;防御随时间增加^reset;\n  ^cyan;种族科技是成功的关键^reset;。\n  ^green;被动生成基因^reset;。\n\n^orange;武器^reset;：\n 艾肯武器：+^green;1.5^reset;% 暴击几率，防御 x^green;1.15^reset;\n\n^red;弱点^reset;：\n  +^red;25^reset;% 饥饿速度\n  ^red;抗性^reset;：-^red;20^reset;% 火炎，寒气&电系，^red;饥饿时上限1.5倍^reset;。\n  ^red;禁止^reset; 使用治疗物品，必须使用种族科技治疗。",
@@ -12,7 +14,9 @@
   {
     "DeniedAlternatives": [],
     "Files": {
-      "species/radien.species": ["/charCreationTooltip/subTitle"]
+      "species/radien.species": [
+        "/charCreationTooltip/subTitle"
+      ]
     },
     "Texts": {
       "Chs": "CH9",
@@ -22,7 +26,9 @@
   {
     "DeniedAlternatives": [],
     "Files": {
-      "species/radien.species": ["/charGenTextLabels/4"]
+      "species/radien.species": [
+        "/charGenTextLabels/4"
+      ]
     },
     "Texts": {
       "Chs": "核心颜色",
@@ -32,7 +38,9 @@
   {
     "DeniedAlternatives": [],
     "Files": {
-      "species/radien.species": ["/charGenTextLabels/1"]
+      "species/radien.species": [
+        "/charGenTextLabels/1"
+      ]
     },
     "Texts": {
       "Chs": "冠部",
@@ -42,7 +50,9 @@
   {
     "DeniedAlternatives": [],
     "Files": {
-      "species/radien.species": ["/charGenTextLabels/0"]
+      "species/radien.species": [
+        "/charGenTextLabels/0"
+      ]
     },
     "Texts": {
       "Chs": "羽毛颜色",
@@ -52,7 +62,9 @@
   {
     "DeniedAlternatives": [],
     "Files": {
-      "species/radien.species": ["/charGenTextLabels/5"]
+      "species/radien.species": [
+        "/charGenTextLabels/5"
+      ]
     },
     "Texts": {
       "Chs": "标记",
@@ -62,7 +74,9 @@
   {
     "DeniedAlternatives": [],
     "Files": {
-      "species/radien.species": ["/charGenTextLabels/8"]
+      "species/radien.species": [
+        "/charGenTextLabels/8"
+      ]
     },
     "Texts": {
       "Chs": "艾肯",
@@ -72,7 +86,9 @@
   {
     "DeniedAlternatives": [],
     "Files": {
-      "species/radien.species": ["/charCreationTooltip/title"]
+      "species/radien.species": [
+        "/charCreationTooltip/title"
+      ]
     },
     "Texts": {
       "Chs": "艾肯",
