add translation for ffguidepower.codex and make small changes to related object names.

--- a/translations/texts/objects/skath/skathfusionreactor/skathfusionreactor.object.json
+++ b/translations/texts/objects/skath/skathfusionreactor/skathfusionreactor.object.json
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "^cyan;大型裂变反应堆^reset;",
+      "Chs": "^cyan;大型聚变反应堆^reset;",
       "Eng": "^cyan;Large Fusion Reactor^reset;"
     }
   }
