add codex translation and fix bee frame description issue

--- a/translations/texts/bees/objects/apiarylarge/apiarylarge.object.json
+++ b/translations/texts/bees/objects/apiarylarge/apiarylarge.object.json
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "提供更多的框巢和工蜂巢位。",
+      "Chs": "提供更多的巢框和工蜂巢位。",
       "Eng": "Provides more slots for frames and drones."
     }
   }
