--- a/translations/texts/zb/researchTree/fu_agriculture.config.json
+++ b/translations/texts/zb/researchTree/fu_agriculture.config.json
@@ -655,7 +655,7 @@
       ]
     },
     "Texts": {
-      "Chs": "^orange;1级^reset;\n\n你已经学会在蜂房里养蜜蜂，为你提供有用的资源。你可以从在^orange;加工台^reset;制造^cyan;蜂场工作台^white;^reset;上开始。\n\n饲养蜜蜂很复杂。如果你不知道怎么养蜂，你可以从科学前哨的蜜蜂庇护所那里购买一份指南，前哨站在你离开起始星球之后就可以到达。\n\n作为简单入门，你需要一只显微镜识别过的蜂后、一只匹配的显微镜识别过的工蜂、一个或多个框巢，以及在蜂房附近种植的一些花卉，以便开始生产。",
+      "Chs": "^orange;1级^reset;\n\n你已经学会在蜂房里养蜜蜂，为你提供有用的资源。你可以从在^orange;加工台^reset;制造^cyan;蜂场工作台^white;^reset;上开始。\n\n饲养蜜蜂很复杂。如果你不知道怎么养蜂，你可以从科学前哨的蜜蜂庇护所那里购买一份指南，前哨站在你离开起始星球之后就可以到达。\n\n作为简单入门，你需要一只显微镜识别过的蜂后、一只匹配的显微镜识别过的工蜂、一个或多个巢框，以及在蜂房附近种植的一些花卉，以便开始生产。",
       "Eng": "^orange;Tier 1^reset;\n\nYou've learned to raise bees in an apiary to provide you with useful resources. Make an ^cyan;Apiary Crafting Station^reset; at your ^orange;Machining Table^reset; to get started.\n\nRaising bees is pretty complex. If you're not sure how, buy a guide from the Bee Refuge in the Science Outpost, accessible once you leave your starter planet.\n\nAs a simple starter tip, you need a microscope-identified queen, a matching microscope-identified drone, one or more frames, and some flowers planted nearby for production to start."
     }
   },
@@ -691,7 +691,7 @@
       ]
     },
     "Texts": {
-      "Chs": "^orange;2级^reset;\n\n你可以制造更大的蜂房和更有用的框巢来提高蜜蜂的产量。",
+      "Chs": "^orange;2级^reset;\n\n你可以制造更大的蜂房和更有用的巢框来提高蜜蜂的产量。",
       "Eng": "^orange;Tier 2^reset;\n\nYou can make bigger bee apiaries and more useful Frames to supplement their production."
     }
   },
@@ -955,7 +955,7 @@
       ]
     },
     "Texts": {
-      "Chs": "^orange;4级^reset;\n\n可以制造更强大的框巢，极大地提高蜜蜂的效率。",
+      "Chs": "^orange;4级^reset;\n\n可以制造更强大的巢框，极大地提高蜜蜂的效率。",
       "Eng": "^orange;Tier 4^reset;\n\nYou can make even more powerful Frames that drastically improve your bees' efficiency."
     }
   },
@@ -1063,7 +1063,7 @@
       ]
     },
     "Texts": {
-      "Chs": "^orange;5级^reset;\n\n你可以制作高级的框巢，大大改善你的蜂巢。",
+      "Chs": "^orange;5级^reset;\n\n你可以制作高级的巢框，大大改善你的蜂巢。",
       "Eng": "^orange;Tier 5^reset;\n\nYou can make advanced Frames that drastically improve your hives."
     }
   },
