--- a/translations/texts/bees/frames/advanced.item.json
+++ b/translations/texts/bees/frames/advanced.item.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "高级框巢",
+      "Chs": "高级巢框",
       "Eng": "Advanced Frame"
     }
   },
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "高级蜂房框巢。\n<beeData>",
+      "Chs": "高级蜂房巢框。\n<beeData>",
       "Eng": "Advanced frame for an apiary.\n<beeData>"
     }
   }
