--- a/translations/texts/bees/frames/basic.item.json
+++ b/translations/texts/bees/frames/basic.item.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "基本的蜂房框巢。没什么特别之处。\n<beeData>",
+      "Chs": "基本的蜂房巢框。没什么特别之处。\n<beeData>",
       "Eng": "Basic frame for an apiary. Does nothing special.\n<beeData>"
     }
   }
