--- a/translations/texts/quests/fu_questlines/outpost/bees/12breeding.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/outpost/bees/12breeding.questtemplate.json
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "现在，你已经有了许多蜂箱，以及蜜蜂，森林蜜蜂等。我在想：如果把^orange;兰草蜂后^reset;和^orange;蜂蜜工蜂^reset;放在^orange;大型蜂箱^reset;会发生什么？如果你再加上^orange;钨制框巢^reset;呢？",
+      "Chs": "现在，你已经有了许多蜂箱，以及蜜蜂，森林蜜蜂等。我在想：如果把^orange;兰草蜂后^reset;和^orange;蜂蜜工蜂^reset;放在^orange;大型蜂箱^reset;会发生什么？如果你再加上^orange;钨制巢框^reset;呢？",
       "Eng": "So, you've got apiaries and honey bees. Now, I wonder: what would happen if you put a ^orange;Orchid Queen^reset; and some ^orange;Honey Drones^reset; into that ^orange;Giant Apiary^reset;? And what about if you added a ^orange;Tungsten Frame^reset;?"
     }
   },
